# pisigma-0-2-2

./: .gitmodules  README.txt  pisigma.cabal  stack.yaml
app/: Main.hs
examples/: bug1.pi
src/: Check.hs  Error.hs  Eval.hs  Evaluate.hs  Pretty.hs  REPL.hs
